--- a/1217/firstproject/src/main/resources/application.properties
+++ b/1217/firstproject/src/main/resources/application.properties
@@ -8,11 +8,14 @@ spring.datasource.url=jdbc:mysql://localhost:3306/firstProject_db?useSSL=false&u
 spring.datasource.username=root
 spring.datasource.password=1234
 
-#true ?? ? jpa ??? ?? ??
 spring.jpa.show-sql=true
 
-#DDL ??? DB? ?? ??? ?? ??
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
-# JPA? ???? Hibernate? ????? ??? SQL? ???? ???
 spring.jpa.properties.hibernate.format_sql=true
+
+
+# 15?: data.sql ??? ?? ??(????? 2.5 ?? ??)
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:data.sql
+spring.jpa.defer-datasource-initialization=true
