--- a/1217/firstproject/src/main/resources/application.properties
+++ b/1217/firstproject/src/main/resources/application.properties
@@ -4,14 +4,17 @@ server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/firstProject_db?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/firstProject_db?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=1234
 
+#true ?? ? jpa ??? ?? ??
 spring.jpa.show-sql=true
 
+#DDL ??? DB? ?? ??? ?? ??
 spring.jpa.hibernate.ddl-auto=create
 
+# JPA? ???? Hibernate? ????? ??? SQL? ???? ???
 spring.jpa.properties.hibernate.format_sql=true
 
 
